v21.07/de/_sources/detection_modules.rst.txt
Detektionsmodule

Der

rc_cube

 bietet Softwaremodule für unterschiedliche Detektionsanwendungen:

LoadCarrier (rc_load_carrier, Abschnitt \ref{loadcarrier:sect-
loadcarrier})  ermöglicht das Anlegen und Abrufen von Load Carriern
(Behältern), sowie deren Erkennung und Füllstandserkennung.

TagDetect (rc_april_tag_detect und rc_qr_code_detect, Abschnitt
\ref{tagdetect:sect-tag-detection})  ermöglicht die Erkennung von
AprilTags und QR-Codes sowie die Schätzung von deren Pose.

ItemPick und BoxPick (rc_itempick und rc_boxpick, Abschnitt
\ref{itempick:sect-itempick})  bietet eine Standardlösung für
robotische Pick-and-Place-Anwendungen für Vakuum-Greifsysteme.

SilhouetteMatch (rc_silhouettematch, Abschnitt \ref{silhouettematch
:sect-silhouettematch})  bietet eine Objekterkennungslösung für
Objekte, die sich auf einer Ebene befinden.

CADMatch (rc_cadmatch, Abschnitt \ref{cadmatch:sect-cadmatch})  bietet
eine Objekterkennungslösung für 3D-Objekte.

Diese Module sind optional und können durch Kauf einer separaten

Lizenz

 aktiviert werden.

